--- a/Starter_Code/mars_news,/part_1_mars_news.ipynb
+++ b/Starter_Code/mars_news,/part_1_mars_news.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 129,
    "metadata": {
     "scrolled": true
    },
@@ -45,11 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Visit the Mars news site\n"
+    "# Visit the Mars news site\n",
+    "url = 'https://static.bc-edx.com/data/web/mars_news/index.html'\n",
+    "browser.visit(url)"
    ]
   },
   {
@@ -64,20 +66,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a Beautiful Soup object\n"
+    "# Create a Beautiful Soup object\n",
+    "html = browser.html\n",
+    "soup = BeautifulSoup(html, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extract all the text elements\n"
+    "# Extract all the text elements\n",
+    "text = soup.find_all()"
    ]
   },
   {
@@ -104,34 +109,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create an empty list to store the dictionaries\n"
+    "# Create an empty list to store the dictionaries\n",
+    "scraped_data = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loop through the text elements\n",
     "# Extract the title and preview text from the elements\n",
     "# Store each title and preview pair in a dictionary\n",
-    "# Add the dictionary to the list\n"
+    "# Add the dictionary to the list\n",
+    "\n",
+    "articles = soup.find_all('div', class_='col-md-12')\n",
+    "\n",
+    "for article in articles:\n",
+    "    title_element = article.find('div', class_='content_title')\n",
+    "    preview_element = article.find('div', class_='article_teaser_body')\n",
+    "\n",
+    "    # Check if both title and preview exist and are not empty before extracting text\n",
+    "    if title_element and preview_element and title_element.text.strip() and preview_element.text.strip():\n",
+    "        title_text = title_element.get_text(strip=True)\n",
+    "        preview_text = preview_element.get_text(strip=True)\n",
+    "\n",
+    "        # Create a dictionary for each article\n",
+    "        article_data = {'title': title_text, 'preview': preview_text}\n",
+    "\n",
+    "        # Append the dictionary to the list\n",
+    "        scraped_data.append(article_data)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[{'title': \"NASA's MAVEN Observes Martian Light Show Caused by Major Solar Storm\",\n",
+       "  'preview': 'For the first time in its eight years orbiting Mars, NASA’s MAVEN mission witnessed two different types of ultraviolet aurorae simultaneously, the result of solar storms that began on Aug. 27.'},\n",
+       " {'title': \"NASA's MAVEN Observes Martian Light Show Caused by Major Solar Storm\",\n",
        "  'preview': 'For the first time in its eight years orbiting Mars, NASA’s MAVEN mission witnessed two different types of ultraviolet aurorae simultaneously, the result of solar storms that began on Aug. 27.'},\n",
        " {'title': \"NASA Prepares to Say 'Farewell' to InSight Spacecraft\",\n",
        "  'preview': 'A closer look at what goes into wrapping up the mission as the spacecraft’s power supply continues to dwindle.'},\n",
@@ -163,18 +188,19 @@
        "  'preview': '“Selfie” of the Curiosity rover with inset showing the SAM instrument prior to installation on the rover.'}]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Print the list to confirm success\n"
+    "# Print the list to confirm success\n",
+    "scraped_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.5"
   },
   "vscode": {
    "interpreter": {
